--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
+    "laravel-echo": "^1.15.3",
+    "nuxt": "^2.17.1",
+    "pusher-js": "^8.3.0",
+    "vue": "^2.7.14",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
